--- a/index-1.html
+++ b/index-1.html
@@ -45,5 +45,7 @@
     <dd>1 Литр</dd>
     <dt>Картошка</dt>
     <dd>2 кг</dd>
+
+    <img src="img/summer.jpeg" width="500" height="400">
     
 </body>
