--- a/index-1.html
+++ b/index-1.html
@@ -46,6 +46,9 @@
     <dt>Картошка</dt>
     <dd>2 кг</dd>
 
+    <a href="index-2.html">О нас</a>
     <img src="img/summer.jpeg" width="500" height="400">
+    <a download="./files/archive.rar">Скачать архив</a>
+
     
 </body>
