попытка исправить скачивание 1

--- a/index-1.html
+++ b/index-1.html
@@ -49,7 +49,7 @@
     <a href="index-2.html">О нас</a>
     <br>
     <img src="img/summer.jpeg" width="500" height="400">
-    <a download="./files/archive.rar">Скачать архив</a>
+    <a href="./files/archive.rar" download>Скачать архив</a>
 
     
 </body>
