--- a/index-1.html
+++ b/index-1.html
@@ -68,6 +68,9 @@
           <text x="400" y="350" dx="30">C</text>
         </g>
     </svg>
+    <svg height="100" width="100">
+        <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="3" fill="white" />
+     </svg>
 
     
 </body>
