--- a/index-1.html
+++ b/index-1.html
@@ -69,7 +69,7 @@
         </g>
     </svg>
     <svg height="100" width="100">
-        <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="3" fill="white" />
+        <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="3" fill="red" />
      </svg>
 
     
