--- a/index-1.html
+++ b/index-1.html
@@ -71,6 +71,10 @@
     <svg height="400" width="500">
         <circle cx="250" cy="200" r="150" stroke="blue" stroke-width="3" fill="red" />
     </svg>
+    <br>
+    <svg width="400" height="400">
+        <rect width="300" height="200" stroke="black" stroke-width="3" fill="purple"/>
+    </svg>
 
     
 </body>
