--- a/index-1.html
+++ b/index-1.html
@@ -75,6 +75,10 @@
     <svg width="400" height="400">
         <rect width="300" height="200" stroke="black" stroke-width="3" fill="purple"/>
     </svg>
+    <svg width="400" height="400">
+        <polygon
+          points="200,0 250,100 400,100 275,200 350,300 200,225 50,300 125,200 0,100 150,100" fill="white" stroke="lightgreen" stroke-width="5"/>
+      </svg>
 
     
 </body>
