добавлен svg текст

--- a/index-1.html
+++ b/index-1.html
@@ -78,7 +78,12 @@
     <svg width="400" height="400">
         <polygon
           points="200,0 250,100 400,100 275,200 350,300 200,225 50,300 125,200 0,100 150,100" fill="white" stroke="lightgreen" stroke-width="5"/>
-      </svg>
+    </svg>
+    <br>
+    <svg width="600">  
+        <text x="0" y="50px" font-size="35px" font-weight="bold" stroke="red" stroke-width="1" fill="black">Черный текст с красной обводкой</text> 
+    </svg> 
+    <br>
 
     
 </body>
