добавлена кривая произвольной формой

--- a/index-1.html
+++ b/index-1.html
@@ -84,6 +84,10 @@
         <text x="0" y="50px" font-size="35px" font-weight="bold" stroke="red" stroke-width="1" fill="black">Черный текст с красной обводкой</text> 
     </svg> 
     <br>
+    <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 0 C 40 300, 105 100, 205 70, S 250 250, 300 0" stroke="black" fill="transparent" stroke-width="5"/>
+    </svg>
+    <br>
 
     
 </body>
