добавлено аудио и видео, немного поменял расположение svg

--- a/index-1.html
+++ b/index-1.html
@@ -87,13 +87,19 @@
     <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 0 C 40 300, 105 100, 205 70, S 250 250, 300 0" stroke="black" fill="transparent" stroke-width="5"/>
     </svg>
-    <br>
     <svg width="500" height="400" xmlns="http://www.w3.org/2000/svg">
         <polygon points="250,0 350,140 210,350 50,199" style="fill:rgb(128, 0, 255); stroke:purple; stroke-width:1; fill-opacity:1" />
         <line x1="100" y1="400" x2="250" y2="30" style="stroke:rgb(45, 11, 11); stroke-width:3" />
         <line x1="0 " y1="240" x2="300" y2="50" style="stroke:red; stroke-width:5" />
         <rect x="60" y="100" width="250" height="40" rx="10" ry="10" style="fill:#0783ff; stroke:#50362d; stroke-width:5; fill-opacity:0.2; stroke-opacity:0.5" />
     </svg>
+    <br>
+    <div class="video-div">
+        <video src="./media/video.mp4" controls="controls" width="640" height="360" loop="loop" preload="auto">
+    </div>
+    <div class="audio-div">
+        <audio src="./media/sound.mp3" controls="controls" preload="auto"></audio>
+    </div>  
 
     
 </body>
