прочитал задание и выполнил

--- a/index-2.html
+++ b/index-2.html
@@ -2,11 +2,35 @@
 <html lang="ru">
 
 <head>
-    <title>Тут ничего нет =(</title>
+    <title>Вторая страница</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <h1><a href="./index-1.html">Обратно</a></h1>
-    </header>
-</body> 
+        <h1 class="title">Привет Мир!</h1>
+    </header>    
+    <i>Давно выяснено,</i> что при оценке дизайна и композиции читаемый текст <s>
+        мешает сосредоточиться.</s>
+        <p class="justify">Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное <u>заполнение шаблона,</u>
+        а также реальное распределение букв и пробелов в абзацах, которое
+        не поучается при простой дубликации.</p>
+    <p>
+        <h2><b>Список покупок:</b></h2>
+    </p>
+    <ul>
+        <li>Хлеб</li>
+        <li>Молоко</li>
+        <li>Картошка</li>
+    </ul>
+    <p>
+        <h2><b>Инструкция:</b></h2>
+    </p>
+    <ol>
+        <li>Вставить батарейки в пульт</li>
+        <li>Нажать кнопку ВКЛ</li>
+    </ol>
+    <dt>Молоко</dt>
+    <dd>1 Литр</dd>
+    <dt>Картошка</dt>
+    <dd>2 кг</dd>
+</body>
