--- a/index-2.html
+++ b/index-2.html
@@ -33,4 +33,28 @@
     <dd>1 Литр</dd>
     <dt>Картошка</dt>
     <dd>2 кг</dd>
+
+    <h2 style="text-align: center;">Таблица №7</h2>
+    <table class="table-class">
+        <tbody>
+            <tr>
+                <td></td>
+                <td colspan="2"></td>
+                <td rowspan="3"></td>
+                <td rowspan="3"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td rowspan="2"></td>
+                <td colspan="4"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
