--- a/index-2.html
+++ b/index-2.html
@@ -56,5 +56,52 @@
             </tr>
         </tbody>
     </table>
+    <h2 style="text-align: center;">Таблица №12</h2>
+    <table class="table-class">
+        <tbody>
+            <tr>
+                <td colspan="4" rowspan="2"></td>
+                <td colspan="1"></td>
+                <td colspan="2" rowspan="2"></td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+            <tr>
+                <td rowspan="2"></td>
+                <td></td>
+                <td rowspan="2"></td>
+                <td rowspan="2"></td>
+                <td colspan="3" rowspan="2"></td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">Таблица №2</h2>
+    <table class="table-class">
+        <tbody>
+            <tr>
+                <td rowspan="3"></td>
+                <td></td>
+                <td rowspan="3"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="2"></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
